# Quotes_scraping

./: authors.json  pyproject.toml
hm_9/: scrapy.cfg
hm_9/hm_9/: items.py  middlewares.py  pipelines.py  settings.py
