[tool.poetry]
name = "home-work"
version = "0.1.0"
description = ""
authors = ["Evgenius87 <plotnikov.evgenij@ukr.net>"]
readme = "README.md"
packages = [{include = "home_work"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
